<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Strings der App -->
    <string name="app_name">Purinwerte in Gerichten</string>

    <!-- Strings aus oldAuswahl -->
    <string name="einleitung">Bitte einen Eintrag auswählen.</string>
    <string name="textPurinwert">Purinwert</string>
    <string name="programm">mg/100g</string>
    <string name="textHarn">Harnsäurewert</string>
    <string name="textAktuell">Aktuellen Purinwert ermitteln für:</string>
    <string name="bezeichner1">g =</string>
    <string name="bezeichner2">mg Purin</string>

    <!-- Strings aus FragmentSelect -->
    <string name="textAuswahl">Bitte Eintrag auswählen</string>
    <string name="textPutinwert">Purinwert</string>
    <string name="textHarnwert">Harnsäurewert</string>
    <string name="textEinheit">mg/100g</string>
    <string name="textAusrechnen">Aktuellen Purinwert ermitteln für:</string>
    <string name="textEinheit2">g</string>
    <string name="buttonBerechne">Berechnen</string>
    <!-- Strings aus CalcDialog -->
    <string name="textAdd">Diesen Wert können sie ihrem Tagesbedarf hinzufügen.</string>
    <string name="buttonAdd">Hinzufügen</string>
    <string name="buttonCancel">Abbruch</string>
    <!-- Strings aus FragmentSearch -->
    <string name="textSuche">Suche</string>
    <string name="textFilter">Filtern nach</string>
    <string name="textFleisch">Fleisch</string>
    <string name="textFisch">Fisch</string>
    <string name="textGemuese">Gemüse</string>
    <string name="textObst">Obst</string>
    <string name="textMilch">Milchprodukt</string>
    <string name="textGetreide">Getreide</string>
    <string name="textPurinXL">viel Purin</string>
    <string name="textPurinM">mittel Purin</string>
    <string name="textPurinS">wenig Purin</string>
    <!-- Strings aus Uber -->
    <string name="textVersion">Version</string>
    <string name="textWebsite">Website</string>
    <string name="textEmail">xek6ae@googlemail.com</string>
    <string name="textHomepage">www.elisathe.de</string>
    <string name="textDeveloper">Developer</string>
    <string name="textName">xek6ae</string>
    <string name="textDatabase">Database Content</string>
    <string name="textCounting">Counting</string>
</resources>
