<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/theme_background_highlight">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/dialog_textCalc"
            android:layout_margin="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textAdd"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonCancel"
                android:id="@+id/dialog_buttonCancel"
                android:background="@drawable/button_theme"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="1.0"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonAdd"
                android:id="@+id/dialog_buttonAdd"
                android:background="@drawable/button_theme"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="1.0"/>
    </LinearLayout>

</LinearLayout>